# csf-recommendation-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cleanup_bad_recs.py  later_expansions.md  pyproject.toml  streamlit_ioi_demo.py
scripts/: seed_instrument_products.py
src/csf_recommendation_engine/: __init__.py  cleanup_recs.py  cli.py  main.py  mock_night_test.py
src/csf_recommendation_engine/core/: config.py  logging.py  observability.py  startup.py  state.py
src/csf_recommendation_engine/domain/: __init__.py  extraction.py  feature_matrix.py  heuristics_build.py  heuristics_index.py  intelligence_layer.py  recommendation_engine.py  reranking.py  schemas.py  voice_inquiry_store.py
src/csf_recommendation_engine/infra/: __init__.py
src/csf_recommendation_engine/jobs/: __init__.py  instrument_resolver.py  nightly_extraction.py  nightly_heuristics.py  nightly_pipeline.py  rec_refresh_pipeline.py  weekend_validation.py
src/csf_recommendation_engine/scripts/: 1_data.py  2_train.py  3_stats.py  4_inference.py  5_eda.py  __init__.py  bootstrap_v1.py  item_features.pkl  (+6 more)
src/daf_sdk/: __init__.py  _base.py  _http.py  auth.py  client.py  decorators.py  exceptions.py  models.py
tests/unit/: test_admin_approval.py  test_engagement_endpoint.py  test_extraction.py  test_hashing.py  test_health.py  test_heuristics_build_extensions.py  test_intelligence_service.py  test_internal_shadow.py  test_nightly_pipeline.py  test_observability.py  test_packet.py  test_product_resolver.py  test_recommend.py  test_validators.py  test_weekend_validation.py
(+60 files in other folders)
